Fix broken width of tel input on narrow viewports
Relates #10

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* :root {
- --my-variable: hsl(0, 0%, 50%);
-} */
-
 * {
     box-sizing: border-box;
     font-family: "Poppins", "Arial", sans-serif;
@@ -102,8 +98,8 @@ p {
 
 fieldset {
     border: 0;
-    display: flex;
-    gap: 1.25rem;
+    display: grid;
+    grid-template-columns: 3rem 1fr;
     margin: 0 1rem;
     padding: 1.25rem 0;
 }
@@ -126,6 +122,7 @@ input[type=checkbox] {
 input[type=tel] {
     font-size: 1.25rem;
     margin-top: 0.75rem;
+    width: 100%;
 }
 
 label > b {
